@startuml



class viewTeams{
    String Team
    Private static void loadTeam();
    Private static void readTeams();
    public viewTeams();
    Scanner scan;
}

class Main{
    public static void main(String[] args)
    ArrayList<Team>
    loadTeams()
    toString()

}
abstract class knockOutTournament{
    String name;
    team1;
    team2;
    int start;
    int end;
    toString()
    private Static Team pickWinner(team1, team2)
    RandomGenerator()
    private static ArrayList<Team> advanceBraceket()
}
class admin{
    String name;
    viewTeams();
    loadTeams()
    removeTeams();
    ArratList<Team>
}

viewTeams <|-- Main
admin --|> viewTeams
knockOutTournament --|> Main


@enduml
